syntax = "proto3";

option csharp_namespace = "PlatformService";

service GrpcPlatform {
    rpc DeleteCommand (DeletePlatformRequest) returns (DeletePlatformResponse);
}

message DeletePlatformRequest {
    string platformId = 1;
}

message DeletePlatformResponse {
    bool success = 1;
}